# wiki-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: publish.yml
src/app/api/dto/: chat_dto.py
src/app/api/routes/chat/: chat_api.py
src/app/api/routes/health/: health_check_api.py
src/app/api/routes/ingest/: ingest_api.py
src/app/configs/: environment.py  logger_config.py  router_config.py
src/app/core/exceptions/: api_exception.py
src/app/core/json/: json_response.py
src/app/hooks/: startup_shutdown_events.py
src/app/security/: access_granter.py  api_roles.py  authentication_provider.py
src/app/server/: server.py
src/app/services/embeddings/: embeddings_service.py
src/app/services/factory/: services_factory.py
src/app/services/health/: health_check_service.py
src/app/services/ingestion/: ingestion_service.py
src/app/services/llm/: ollama_client.py
src/app/services/rag/: rag_service.py
src/app/services/scheduler/: sync_scheduler.py
src/app/storage/rds/clients/: database_manager.py
src/app/storage/vector/: vector_store.py
tests/: conftest.py  test_ingestion_sync.py  test_ollama_client.py  test_vector_store.py
tests/integration/: test_ollama_it.py  test_vector_store_it.py
