[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-chat"
version = "0.1.0"
description = "Backend chatbot RAG de la base de connaissances wiki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.123.0",
    "uvicorn==0.38.0",
    "orjson",
    "python-dotenv",
    "python-json-logger",
    "python-multipart",
    "asyncpg",
    "aiohttp",
    "sentence-transformers",
    "langchain-text-splitters",
    "pyjwt[crypto]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: tests that need a real Postgres/pgvector or Ollama",
]
